--- a/Sign-Up/signup.html
+++ b/Sign-Up/signup.html
@@ -22,7 +22,7 @@
                 <form>
                     <div class="row">
                         <div class="col-6">
-                            <input type="text" class="form-control" id="username" placeholder="Full name">
+                            <input type="text" class="form-control" id="name" placeholder="Full name">
                         </div>
                         <div class="col-6">
                             <input type="email" class="form-control" id="email" placeholder="Email address">
@@ -33,10 +33,10 @@
                     <br>
                     <div class="row">
                         <div class="col-6">
-                            <input type="password" class="form-control" id="username" placeholder="Password">
+                            <input type="password" class="form-control" id="pwd" placeholder="Password">
                         </div>
                         <div class="col-6">
-                            <input type="password" class="form-control" id="email" placeholder="Confirm password">
+                            <input type="password" class="form-control" id="re_pwd" placeholder="Confirm password">
                         </div>
                     </div>
                     <br>
