--- a/Sign-Up/signup.html
+++ b/Sign-Up/signup.html
@@ -36,7 +36,7 @@
                             <input type="password" class="form-control" id="pwd" placeholder="Password">
                         </div>
                         <div class="col-6">
-                            <input type="password" class="form-control" id="re_pwd" placeholder="Confirm password">
+                            <input type="password" class="form-control" id="repwd" placeholder="Confirm password">
                         </div>
                     </div>
                     <br>
@@ -57,7 +57,7 @@
                 </button>
 
                 <br><br><br>
-                <p style="text-align: center">Sign up for a <a href="#">Business account</a>.</p>
+                <p style="text-align: center">Sign up for a <a href="./businessAcc.html">Business account</a>.</p>
             </div>
         </div>
     </div>
